tests/expectations/compiler/integers/u64/min_fail.out
Error [ETYC0372008]: The value -1 is not a valid `u64`
    --> compiler-test:4:22
     |
   4 |         let a: u64 = -1u64;
     |                      ^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
